Fix spacing

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -27,9 +27,6 @@ div {
 }
 
 .welcome {
-	-js-display: flex;
-	display: flex;
-	flex-direction: column;
 	height: 100vh;
 }
 
@@ -42,8 +39,7 @@ div {
 	background: url(/images/phone-background.svg) no-repeat;
 	background-size: cover;
 	width: 100%;
-	height: 100%;
-	flex: 1 1 auto;
+	height: 410px;
 	padding: 2em 0;
 	color: #fff;
 }
@@ -119,9 +115,5 @@ div {
 	.app-store-container img {
 		width: 100%;
 		height: auto;
-	}
-
-	.rolex-container {
-		padding: 1em;
 	}
 }
